# Cagnotte

./: PKG-INFO  README.md  pyproject.toml
src/cagnotte/: __init__.py  data.py  domain.py  views.py
src/cagnotte/templates/: home.html
