[project]
name = "cagnotte"
version = "0.1"
description = "Project of application to manage cagnotte"
readme = "README.md"
dependencies = [
    "click>=8.3.2",
    "sqlalchemy>=2.0.49",
]
requires-python = ">=3.11"


[project.scripts]
cagnotte = "cagnotte:cli"


[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
