[project]
name = "cagnotte"
version = "1.0"
description = "Project of application to manage cagnotte"
readme = "README.md"
dependencies = [
    "click>=8.3.2",
    "flask>=3.1.3",
    "sqlalchemy>=2.0.49",
]
requires-python = ">=3.11"


[project.scripts]
cagnotte = "cagnotte:cli"


[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
